# stm32f0-crc-test

./: Cargo.toml  LICENSE  README.md  memory.x
src/: crc.rs  main.rs
